# paillier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: alternative_base.py  benchmarks.py  federated_learning_with_encryption.py  logistic_regression_encrypted_model.py
phe/: command_line.py  encoding.py  paillier.py  util.py
phe/tests/: cli_test.py  math_test.py  paillier_test.py  util_test.py
tests/: test_paillier.py
