[build-system]
requires = ["pdm-backend~=2.0.6"]
build-backend = "pdm.backend"

[project]
name = "python-paillier"
dynamic = ["version"]
description = "Partially Homomorphic Encryption library for Python"
authors = [
    { name = "CSIRO's Data61", email = "confidential-computing@data61.csiro.au" },
]
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
    "pycrypto>=2.6.1",
    "gmpy2>=2.0.4",
    "numpy>=1.9.1",
    "nose>=1.3.4",
    "click>=6.7",
]
requires-python = ">=3.9,<3.13"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["cryptography","encryption","homomorphic"]

[project.urls]
Homepage = "https://github.com/data61/python-paillier"
Source = "https://github.com/data61/python-paillier"

[tool.pylint.main]
ignore-patterns = ["kt_*.py"]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
force-exclude = 'kt_.*.py'

[project.scripts]
pheutil = "phe.command_line:cli"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"GNSScodegen.py" = ["E501"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list = py{38,39,310}
    isolated_build = true

    [testenv]
    groups = dev
    commands =
        pdm run pytest
"""

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=phe",
    "--doctest-modules",
]
testpaths = [
    "phe/tests/",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
    "phe/",
]
excludes = [
    "tests",
    "examples",
    "build",
    "dev",
    "dist",
    "mockup",
    "ksy"
]
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3~=0.10.0",
    "pylint~=2.15.3",
]
test = [
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-mock~=3.8.2",
    "pytest-instafail~=0.4.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest-html~=3.1.1",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/phe
    pdoc --html --force --config latex_math=True -o htmldoc phe
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    docstr-coverage phe -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/phe/doc_badge.svg
    coverage-badge -f -o htmldoc/phe/cov_badge.svg
"""
